--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,9 @@
     font-family: "Roboto", sans-serif;
 }
 
-.navigation {
-    padding-top: 22px;
-    padding-bottom: 13px;
+.header {
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .nav-logo {
