--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root {
     --logo-color: #000;
-    --background: #2f303a;
+    --background-footer: #2f303a;
     --background: #fff;
     --button-color: #2196f3;
     --title-color: #212121;
@@ -84,4 +84,39 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.presentation {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    color: var(--background);
+    background-color: var(--background-footer);
+}
+
+.presentation-title {
+    font-weight: 900;
+    font-size: 44px;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 30px;
+    font-family: 'Roboto', sans-serif;
+}
+.presentation-button{
+padding-top: 10px;
+padding-bottom: 10px;
+padding-left: 30px;
+padding-right: 30px;
+margin: 0 auto;
+background-color: var(--button-color);
+border-radius: 4px;
+border: 2px;
+font-family: 'Roboto', sans-serif;
+}
+.button-link {
+    font-weight: 700;
+    font-size: 16px;
+    letter-spacing: 0.06em;
+    text-align: center;
+    color: var(--background);
 }
