--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     --text-color: #757575;
     --footer-text-color: rgba(255, 255, 255, 0.6);
     --team-background: #f5f4fa;
-    --line-color:#ececec;
+    --line-color: #ececec;
 }
 
 .container {
@@ -307,7 +307,36 @@
 .team-item {
     box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
 }
-.choose{
+
+.choose {
     padding-top: 94px;
     padding-bottom: 94px
+}
+
+.choose-list {
+    display: flex;
+    margin-bottom: 50px;
+    justify-content: center;
+}
+
+.choose-item {
+    margin-right: 8px;
+}
+
+.choose-btn {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 162%;
+    letter-spacing: 0.03em;
+    text-align: center;
+    padding-right: 22px;
+    padding-left: 22px;
+    border: none;
+    border-radius: 4px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.choose-btn:hover {
+    background-color: var(--button-color);
+    
 }
