--- a/css/style.css
+++ b/css/style.css
@@ -183,24 +183,31 @@
     padding-top: 27px;
     padding-bottom: 27px;
 }
-.work-item{
+
+.work-item {
     position: relative;
-    margin: 0;
-    padding: 0;
 }
+
 .work-text {
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
+    font-weight: 700;
+    font-size: 14px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
     text-align: center;
+    padding-top: 27px;
+    padding-bottom: 27px;
+    color: var(--background);
     width: 100%;
     background-color: rgba(47, 48, 58, 0.8);
+    font-family: 'Roboto', sans-serif;
 }
 
 .work-list {
     display: flex;
     justify-content: space-evenly;
-
 }
 
 .team {
