--- a/css/style.css
+++ b/css/style.css
@@ -417,35 +417,47 @@
     letter-spacing: 0.03em;
     color: var(--text-color);
 }
-.nav-icon{
+
+.nav-icon {
     fill: var(--text-color);
     margin-right: 8px;
 }
+
 .nav-icon:hover,
-.nav-icon:focus{
-fill: var(--button-color); 
+.nav-icon:focus {
+    fill: var(--button-color);
 
 }
-.mail{
+
+.mail {
     width: 16px;
     height: 12px;
 }
-.phone{
+
+.phone {
     width: 10px;
     height: 16px;
 }
-.icon-list{
+
+.icon-list {
     display: flex;
     justify-content: center;
     gap: 8px;
     margin-top: 16px;
 }
-.team-icon{
+
+.team-icon {
     width: 20px;
     height: 20px;
     fill: var(--text-color);
 }
-.item-icon{
+
+.team-icon:hover,
+.team-icon:focus {
+    fill: var(--background);
+}
+
+.item-icon {
     width: 44px;
     height: 44px;
     border-radius: 50px;
@@ -453,7 +465,34 @@ fill: var(--button-color);
     justify-content: center;
     align-items: center;
 }
+
 .item-icon:hover,
-.item-icon:focus{
+.item-icon:focus {
     background-color: var(--button-color);
+}
+
+.clients {
+    padding-top: 94px;
+    padding-bottom: 103px;
+}
+
+.clients-title {
+    text-align: center;
+    font-weight: 700;
+    font-size: 36px;
+    letter-spacing: 0.03em;
+    color: var(--title-color);
+    font-family: 'Roboto', sans-serif;
+    margin-bottom: 50px;
+}
+.clients-list{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.clients-item{
+    width: 106px;
+    height: 60px;
+    margin-right: 30px;
 }
