--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     --team-background: #f5f4fa;
     --line-color: #ececec;
     --portfolio-tasks-color: #eee;
+    --icons-color: #afb1b8;
 }
 
 .container {
@@ -485,14 +486,26 @@
     font-family: 'Roboto', sans-serif;
     margin-bottom: 50px;
 }
-.clients-list{
+
+.clients-list {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+
 }
-.clients-item{
+
+.clients-item {
+    margin-right: 30px;
+    border: 1px solid var(--icons-color);
+    border-radius: 4px;
+padding-top: 22px;
+padding-bottom: 22px;
+fill: var(--icons-color);
+padding-left: 50px;
+padding-right: 50px;
+}
+
+.clients-icon {
     width: 106px;
     height: 60px;
-    margin-right: 30px;
 }
