--- a/css/style.css
+++ b/css/style.css
@@ -548,3 +548,35 @@
 .footer-box {
     display: flex;
 }
+
+.footer-form-title {
+    font-weight: 700;
+    font-size: 14px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    font-family: 'Roboto', sans-serif;
+    color: var(--background);
+}
+
+.footer-form-btn {
+    width: 200px;
+    height: 50px;
+    background-color: var(--button-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Roboto', sans-serif;
+    color: var(--background);
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    
+}
+.footer-form-icon{
+    fill: var(--background);
+    width: 24px;
+    height: 24px;
+    margin-left: 10px;
+
+}
