--- a/css/style.css
+++ b/css/style.css
@@ -549,6 +549,10 @@
     display: flex;
 }
 
+.form {
+    margin-left: 93px;
+}
+
 .footer-form-title {
     font-weight: 700;
     font-size: 14px;
@@ -571,12 +575,29 @@
     border: none;
     border-radius: 4px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    
+
 }
-.footer-form-icon{
+
+.footer-form-icon {
     fill: var(--background);
     width: 24px;
     height: 24px;
     margin-left: 10px;
 
+}
+
+.footer-form-input {
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    width: 358px;
+    height: 50px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background: rgba(33, 150, 243, 0);
+    padding-left: 16px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.footer-form-wrap {
+    display: flex;
+    gap: 12px;
 }
