--- a/css/style.css
+++ b/css/style.css
@@ -605,14 +605,47 @@
 .modal {
     width: 528px;
     height: 581px;
-    padding-right: 8px;
     position: absolute;
     top: 221px;
     left: 536px;
     background-color: var(--background);
     border-radius: 4px;
     box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+    padding-top: 8px;
 }
-.modal-btn{
-border-radius: 50px;
+
+.modal-btn {
+    border-radius: 50px;
+    width: 30px;
+    height: 30px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: var(--background);
+    margin-left: 490px;
+}
+
+.modal-icon {
+    width: 18px;
+    height: 18px;
+    fill: var(--logo-color);
+    display: block;
+    margin: 0 auto;
+}
+
+.backdrop {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.no-scroll {
+    overflow: hidden;
 }
