--- a/css/style.css
+++ b/css/style.css
@@ -470,6 +470,7 @@
 .item-icon:hover,
 .item-icon:focus {
     background-color: var(--button-color);
+    fill: var(--background);
 }
 
 .clients {
@@ -606,8 +607,9 @@
     width: 528px;
     height: 581px;
     position: absolute;
-    top: 221px;
-    left: 536px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: var(--background);
     border-radius: 4px;
     box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
