--- a/css/style.css
+++ b/css/style.css
@@ -64,10 +64,27 @@
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.02em;
     color: var(--title-color);
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: ease;
 }
 
 .nav-link:hover {
     color: var(--button-color);
+}
+
+.wrap-link {
+    margin-left: 50px;
+    color: var(--text-color);
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 0.02em;
+    display: flex;
+    align-items: center;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: ease;
 }
 
 .wrap-link:hover {
@@ -81,17 +98,6 @@
 
 .nav-wrap:hover {
     color: var(--button-color);
-}
-
-.wrap-link {
-    margin-left: 50px;
-    color: var(--text-color);
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    font-size: 14px;
-    letter-spacing: 0.02em;
-    display: flex;
-    align-items: center;
 }
 
 .header-wrap {
@@ -140,6 +146,7 @@
     border-radius: 4px;
     color: var(--background);
     letter-spacing: 0.06em;
+
 }
 
 .benefice {
@@ -371,6 +378,9 @@
     border: none;
     border-radius: 4px;
     font-family: 'Roboto', sans-serif;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: ease;
 }
 
 .choose-btn:hover {
@@ -389,6 +399,9 @@
     margin-bottom: 30px;
     font-family: 'Roboto', sans-serif;
     border: 1px solid var(--portfolio-tasks-color);
+    transition-property: box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: ease;
 }
 
 .main-item:hover {
@@ -451,6 +464,9 @@
     width: 20px;
     height: 20px;
     fill: var(--text-color);
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: ease;
 }
 
 .team-icon:hover,
@@ -465,12 +481,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: ease;
 }
 
 .item-icon:hover,
 .item-icon:focus {
     background-color: var(--button-color);
     fill: var(--background);
+    cursor: pointer;
 }
 
 .clients {
@@ -509,8 +529,13 @@
 .clients-icon {
     width: 106px;
     height: 60px;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: ease;
 }
-
+.clients-icon:hover{
+    fill: var(--button-color);
+}
 .footer-wrap {
     margin-left: 70px;
 }
@@ -538,8 +563,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: ease;
 
+}
+.footer-wrap-item:hover{
+    background-color: var(--button-color);
+    cursor: pointer;
+}
 .footer-wrap-icon {
     fill: var(--background);
     width: 20px;
