--- a/css/style.css
+++ b/css/style.css
@@ -524,18 +524,20 @@
     fill: var(--icons-color);
     padding-left: 32px;
     padding-right: 32px;
+    transition-property: fill, border;
+    transition-duration: 250ms;
+    transition-timing-function: ease;
+    cursor: pointer;
 }
-
+.clients-item:hover{
+    fill: var(--button-color);
+    border: 1px solid var(--button-color);
+}
 .clients-icon {
     width: 106px;
     height: 60px;
-    transition-property: fill;
-    transition-duration: 250ms;
-    transition-timing-function: ease;
 }
-.clients-icon:hover{
-    fill: var(--button-color);
-}
+
 .footer-wrap {
     margin-left: 70px;
 }
@@ -700,6 +702,7 @@
     text-align: center;
     color: var(--title-color);
     margin-bottom: 12px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .form-item {
